fixes alignment issues on line items and removes crud from stories

--- a/public/style.css
+++ b/public/style.css
@@ -2,29 +2,12 @@ body {
   font-family: 'Quicksand', sans-serif;
   font-weight: 300;
   background-color: turquoise;
-  color: white;
+  color: darkgray;
   margin: 20px;
 }
 header {
   width: 1000px;
   margin-left: 200px;
-}
-nav {
-  font-size: 20px;
-  float: right;
-  margin-bottom: 20px;
-}
-a:link {
-  text-decoration: none;
-  color: white;
-}
-a:visited {
-  text-decoration: none;
-  color: white;
-}
-a:hover {
-  text-decoration: none;
-  color: gold;
 }
 .container {
   border-radius: 6px;
@@ -56,7 +39,7 @@ h1 {
 }
 li {
   font-size: 20px;
-  line-height: 1;
+  line-height: 1.2;
   padding: 4px;
   color: darkgray;
   list-style-type: none;
@@ -67,15 +50,11 @@ form {
 .todos {
   display: inline-block;
   width: 500px;
-  text-overflow: ellipsis;
-  overflow: hidden;
-  white-space: nowrap;
   text-transform: capitalize;
 }
 .story {
   display: inline-block;
   width: 740px;
-  /*overflow: hidden;*/
   white-space: wrap;
 }
 .x-btn {
@@ -96,11 +75,3 @@ form {
   margin: 5px;
   text-transform: capitalize;
 }
-/*.update {
-  display: inline-block;
-  width: 400px;
-  text-overflow: ellipsis;
-  overflow: hidden;
-  white-space: nowrap;
-}*/
-
